--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "koa-body": "^2.0.1",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.1.1",
+    "koa-send": "^4.1.0",
     "koa-static": "^3.0.0",
     "lodash": "^4.17.4",
     "mysql": "^2.13.0",
